Images stretch to avoid blank space.  Adding some bolding and underline to edit overlay text

--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -86,8 +86,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: fit-content;
+    width: fit-content; /* Swap these values to avoid stretching squares */
+    height: 100%; /* It will leave blank space instead */
     border: 2px solid transparent;
     border-radius: 10px;
     box-sizing: border-box;
@@ -100,7 +100,7 @@
 
 .image-container img {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
     transition: transform 0.3s, filter 0.3s;
